# KPipesKDE

./: CMakeLists.txt  LICENSE  Messages.sh  README.md  gdb-test.sh
package/: metadata.desktop
package/contents/ui/: config.qml  main.qml
plugin/: CMakeLists.txt  buffer.h  bufferwrapper.h  cube.h  instance.h  kpipeskde.qrc  kpipeskdeplugin.cpp  kpipeskdeplugin.h  kpipesrenderer.cpp  kpipesrenderer.h  kpipesview.cpp  kpipesview.h  qmldir  resources.s  shader.frag.glsl  shader.vert.glsl  tiny_obj_loader.cc  tiny_obj_loader.h  vertex.cpp  vertex.h
